js/js.translator/testData/incremental/invalidation/esModules/lib1/l1.0_data_class.kt
data class Demo(konst x: Int) {
}
